force-app/main/default/objects/AG_Intake__c/AG_Intake__c.object-meta.xml
<CustomObject>
    <label>Intake</label>
    <nameField>
        <displayFormat>IN-{0000000000}</displayFormat>
        <label>Intake Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intakes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>