force-app/main/default/objects/AG_Intake__c/fields/AG_Client__c.field-meta.xml
<CustomField>
    <fullName>AG_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intakes (Client)</relationshipLabel>
    <relationshipName>Intakes2</relationshipName>
    <type>Lookup</type>
</CustomField>