force-app/main/default/objects/AG_Intake__c/fields/AG_Demographic_Information__c.field-meta.xml
<CustomField>
    <fullName>AG_Demographic_Information__c</fullName>
    <label>Demographic Information</label>
    <type>TextArea</type>
</CustomField>