force-app/main/default/objects/AG_Intake__c/fields/AG_Insurance_Information__c.field-meta.xml
<CustomField>
    <fullName>AG_Insurance_Information__c</fullName>
    <label>Insurance Information</label>
    <type>TextArea</type>
</CustomField>