force-app/main/default/objects/AG_Intake__c/fields/AG_Intake_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>AG_Intake_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake Coordinator</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intakes</relationshipLabel>
    <relationshipName>Intakes</relationshipName>
    <type>Lookup</type>
</CustomField>