force-app/main/default/objects/AG_Intake__c/fields/AG_Referral__c.field-meta.xml
<CustomField>
    <fullName>AG_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral</label>
    <referenceTo>AG_Referral__c</referenceTo>
    <relationshipLabel>Intakes</relationshipLabel>
    <relationshipName>Intakes</relationshipName>
    <type>Lookup</type>
</CustomField>