force-app/main/default/objects/AG_Intake__c/fields/AG_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>AG_Service_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Provider</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Intakes1</relationshipName>
    <type>Lookup</type>
</CustomField>