force-app/main/default/objects/AG_Intake__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AG_Intake_Coordinator__c</columns>
    <columns>AG_Client__c</columns>
    <columns>AG_Service_Provider__c</columns>
    <columns>AG_Insurance_Information__c</columns>
    <columns>AG_Demographic_Information__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>